// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.edpaggregator.v1alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

option java_package = "org.wfanet.measurement.edpaggregator.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "ResultsFulfillerParamsProto";

// Message representing the params used for the results fulfiller tee app
message ResultsFulfillerParams {
  // Message representing the storage details used
  message StorageDetails {
    // The prefix path for labeled impression storage
    string labeled_impressions_metadata_blob_uri_prefix = 1
        [(google.api.field_behavior) = REQUIRED];

    // The GCS project ID for the requisitions storage
    string requisitions_storage_project_id = 2;

    // The GCS project ID for the labeled impression metadata storage
    string labeled_impression_metadata_storage_project_id = 3;

    // The GCS project ID for the labeled impression storage
    string labeled_impression_storage_project_id = 4;
  }

  StorageDetails storage_details = 3 [(google.api.field_behavior) = REQUIRED];
}
